Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-135596

SVG Stroke Animation Rendering Issue in Qt6.9.0

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.9.1, 6.10.0 FF
    • 6.9.0
    • SVG Support
    • None
    • Windows
    • 331bd346d (dev), c937b0547 (6.9)

      Affected Versions:

      Tested on Qt 6.6.0 - 6.9.0. The issue occurs in Qt 6.9.0, while Qt 6.8.0 renders correctly.


      Issue Description:

      The goal is to make the stroke color flash using values="#FFFFFF;#2c2a38;#FFFFFF". Since the start (color 1) and end (color 3) are the same, the expected behavior is a smooth transition between two colors without abrupt changes.

      Two issues were observed:

      1. Color Transition Issue: In Qt 6.9.0, color 3 is ignored, causing an abrupt jump from color 2 back to color 1 instead of a smooth transition. This behavior is incorrect. In Qt 6.8.0 and earlier, the transition works as expected.
      2. Initial Stroke Color Requirement: Normally, stroke should not require a manually set initial color, as the animation should define it. In Qt 6.9.0, if no initial color is explicitly set, the element is not rendered at all. In Qt 6.8.0 and earlier, this step was unnecessary, and rendering behaved as expected.

      The attached files demonstrate the issue:

      • initial_color.svg: Works as expected in Qt 6.8.0 and earlier but exhibits the color transition issue in Qt 6.9.0.
      • no_initial_color.svg: Works as expected in Qt 6.8.0 and earlier but fails to render in Qt 6.9.0 due to the missing initial stroke color.

      Reproduction Steps:

      Open the attached files using the official SVG viewer (Src\qtsvg\tests\manual\examples\svgviewer) and compare the rendering behavior between Qt 6.8.0 and Qt 6.9.0.

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hatemelkharashy Hatem ElKharashy
            liziqi liziqi
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes